testsuite/tests/checks/deep_library/test.out
realy-realy-realy-deep-pkg.ads:1:9: error: unit has too many ancestors
1 | package Realy.Realy.Realy.Deep.Pkg is
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^ 

